# Mira

./: .bandit  .bg_health.json  .cover_history.json  .gitignore  .pending_publish.json  .pre-commit-config.yaml  .secrets.baseline  .session_context.json  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  HANDOFF_persona_gates.md  HANDOFF_persona_gates_RESULT.md  HANDOFF_twitter_restart.md  Mira_design.md  README.md  STABILITY.md  TODO.md  config.example.yml  conftest.py  photos_lred  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  secrets.example.yml  sources.example.json
.github/: pull_request_template.md
.pre-commit-cache/: db.db
Mira-bridge-example/: README.md
Mira-iOS/: SETUP.md
agents/: .output_quality.jsonl  run_tests.py
bridge/: contract.json
config/: hard_rules_backend.json  unethical_phrases.txt
docs/: CURRENT_PLAN.md  README.md  architecture-decisions.md  daily-collab-plane.md  dark-theme.css  data-migration-plan.md  dev-box-architecture-audit-2026-05-01.md  dispatch-architecture.md  mira-next.md  next-phase-plan-2026-04-06-specialist-review-mesh.md  north-star.md  objectives-and-metrics.md  operations-handbook.md  production-roadmap.md  substack-growth-plan.md  system-design.md  v3-architecture.html  v3.1-architecture.html  v31-implementation-review-2026-05-21.md  v31-north-star-remaining-gates-2026-05-21.md  v4-architecture.html  v4-architecture.md  v5-master-plan.md
lib/: auth_health.py  bridge.py  config.py  llm.py  log_config.py  notes_bridge.py  pathsetup.py  prompts.py  sensitivity_patterns.json  soul_manager.py  user_paths.py
output/: status.json
scripts/: auth_health_check.py  backup.sh  backup_integrity.py  baseline_snapshot.py  check_imports.py  (+9 more)
(+1464 files in other folders)
